dev/service.yml
apiVersion: v1
kind: Service
metadata:
  name: treeapi-svc
  namespace: treeapi
  labels:
    app: treeapi
spec:
  type: NodePort
  selector:
    app: treeapi
  ports:
    - port: 8000
      targetPort: 8000
